--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,37 +12,12 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('/favicon.ico') }}" />
     </head>
     <body>
-        <nav class="navbar navbar-default">
-            <div class="container">
-                
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">
-                        <img alt="Brand" src="{{ asset('/img/logo.png') }}">
-                    </a>
-                </div>
-
-                <div class="collapse navbar-collapse" id="navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+       <div class="container">
+            <a class="navbar-brand" href="/">
+                <img alt="Brand" src="{{ asset('/img/logo.png') }}">
+            </a>
+        </div>
+                    
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="{{ asset('/js/vendor/jquery-1.11.2.min.js') }}"></script>
