--- a/app/Resources/views/project/edit.html.twig
+++ b/app/Resources/views/project/edit.html.twig
@@ -9,8 +9,12 @@
 
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <div class="page-header">
-                            <h1>{{ project.name }}</h1>
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="page-header">
+                                    <h1>{{ project.name }}</h1>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="row">
