--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -10,9 +10,13 @@
 
                 <div class="panel panel-default">
                     <div class="panel-body">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
 
-                        <div class="page-header">
-                            <h3>New Project</h3>
+                                <div class="page-header">
+                                    <h3>New Project</h3>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="row">
